docs/i18n/el/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Συντομεύσεις"
sidebar_position: 2
---

Υπάρχουν μερικές συντομεύσεις που μπορείτε να χρησιμοποιήσετε στον επεξεργαστή. Μερικά από αυτά είναι γραμμένα κάτω από τα κουμπιά.

## Γενικά

* `Ctrl` + `N`: Νέο αρχείο
* `Ctrl` + `Shift` + `N`: Νέο αρχείο από πρότυπο
* `Ctrl` + `O`: Άνοιγμα αρχείου
* `Ctrl` + `I`: Εισαγωγή αρχείου
* `Ctrl` + `E`: Εξαγωγή αρχείου
* `Ctrl` + `Shift` + `E`: Εξαγωγή αρχείου ως εικόνα
* `Ctrl` + `Alt` + `E`: Εξαγωγή αρχείου ως svg
* `Ctrl` + `Alt` + `S`: Άνοιγμα ρυθμίσεων

## Έργο

* `Ctrl` + `Z`: Αναίρεση
* `Ctrl` + `Y`: Επανάληψη
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Άνοιγμα ρυθμίσεων έργου
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Άνοιγμα διαλόγου παλέτας χρωμάτων
* `Ctrl` + `B`: Άνοιγμα διαλόγου παρασκηνίου
* `Ctrl` + `Shift` + `A`: Διάλογος ανοικτών περιοχών
* `Ctrl` + `L`: Άνοιγμα επιπέδων διαλόγου
* `Ctrl` + `S`: Αποθήκευση
* `Alt` + `S`: Αλλαγή διαδρομής

## Stylus

* `Πρωτεύον κουμπί`: Αλλαγή σε εργαλείο χειρός
* `Δευτερεύον κουμπί`: Αλλαγή σε δεύτερο ζωγράφο
